--- a/Project 2-Titanic_Train.ipynb
+++ b/Project 2-Titanic_Train.ipynb
@@ -1807,14 +1807,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import r2_score"
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import accuracy_score,confusion_matrix,classification_report"
    ]
   },
   {
@@ -1858,11 +1859,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=.20,random_state=30)"
+    "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=.20,random_state=30)\n",
+    "lr.fit(x_train,y_train)\n",
+    "y_pred=lr.predict(x_test)\n",
+    "lr.score(x_train,y_train)"
    ]
   },
   {
